--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,9 @@
-fastapi==0.109.0
-uvicorn[standard]==0.27.0
-sqlalchemy==2.0.25
-python-jose[cryptography]==3.3.0
-bcrypt==4.1.2
-pydantic[email]==2.5.3
-python-multipart==0.0.6
-email-validator==2.1.0
+fastapi>=0.115.0
+uvicorn[standard]>=0.32.0
+sqlalchemy>=2.0.36
+python-jose[cryptography]>=3.3.0
+bcrypt>=4.2.0
+pydantic[email]>=2.10.0
+python-multipart>=0.0.17
+email-validator>=2.2.0
+aiosqlite>=0.20.0
