--- a/render.yaml
+++ b/render.yaml
@@ -1,12 +1,13 @@
 # Render.com Blueprint
-# Deploy both backend API and frontend from single service
 
 services:
   - type: web
     name: music-venue-app
     runtime: python
+    plan: free
     buildCommand: pip install -r backend/requirements.txt
     startCommand: cd backend && uvicorn main:app --host 0.0.0.0 --port $PORT
+    healthCheckPath: /health
     envVars:
       - key: SECRET_KEY
         generateValue: true
@@ -18,7 +19,6 @@ services:
           property: connectionString
       - key: OCR_API_KEY
         value: "K82925827188957"
-    healthCheckPath: /health
 
 databases:
   - name: music-venue-db
