--- a/render.yaml
+++ b/render.yaml
@@ -1,36 +1,30 @@
-# Exported from Render on 2026-02-08T15:54:52Z
-version: "1"
-projects:
-  - name: music-venue-project
-    environments:
-      - name: Production
-        databases:
-          - name: music-venue-db
-            databaseName: music_venue
-            user: music_venue_user
-            plan: free
-            region: oregon
-            ipAllowList:
-              - source: 0.0.0.0/0
-                description: everywhere
-            postgresMajorVersion: "18"
-        services:
-          - name: music-venue-app
-            type: web
-            runtime: python
-            plan: free
-            region: oregon
-            buildCommand: pip install -r backend/requirements.txt
-            startCommand: cd backend && uvicorn main:app --host 0.0.0.0 --port $PORT
-            healthCheckPath: /health
-            envVars:
-              - key: SECRET_KEY
-                generateValue: true
-              - key: FRONTEND_URL
-                value: "*"
-              - key: DATABASE_URL
-                fromDatabase:
-                  name: music-venue-db
-                  property: connectionString
-              - key: OCR_API_KEY
-                value: "K82925827188957"
+# Render Blueprint
+services:
+  - type: web
+    name: music-venue-app
+    runtime: python
+    plan: free
+    region: oregon
+    buildCommand: pip install -r backend/requirements.txt
+    startCommand: cd backend && uvicorn main:app --host 0.0.0.0 --port $PORT
+    healthCheckPath: /health
+    envVars:
+      - key: SECRET_KEY
+        generateValue: true
+      - key: FRONTEND_URL
+        value: "*"
+      - key: DATABASE_URL
+        fromDatabase:
+          name: music-venue-db
+          property: connectionString
+      - key: OCR_API_KEY
+        value: "K82925827188957"
+
+databases:
+  - name: music-venue-db
+    plan: free
+    region: oregon
+    databaseName: music_venue
+    ipAllowList:
+      - source: 0.0.0.0/0
+        description: everywhere
